<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ingenico.androidkeystore.MainActivity">
    <item
        android:id="@+id/action_generate_keypair"
        android:orderInCategory="0"
        android:title="@string/action_generate_keypair" />
    <item
        android:id="@+id/action_export_csr"
        android:orderInCategory="10"
        android:title="@string/action_export_csr" />
    <item
        android:id="@+id/action_import_certificate"
        android:orderInCategory="20"
        android:title="@string/action_import_certificate" />
    <item
        android:id="@+id/action_show_pkcs12_certificate"
        android:orderInCategory="30"
        android:title="@string/action_show_pkcs12_certificate" />
    <item
        android:id="@+id/action_delete_all_keys"
        android:orderInCategory="40"
        android:title="@string/action_delete_all_keys" />
    <item
        android:id="@+id/action_delete_other_keys"
        android:orderInCategory="50"
        android:title="@string/action_delete_other_keys" />
    <item
        android:id="@+id/action_ssl_connect"
        android:orderInCategory="60"
        android:title="@string/action_ssl_connect" />
    <item
        android:id="@+id/action_import_ca"
        android:orderInCategory="21"
        android:title="@string/action_import_ca" />
</menu>